# tests

./: .gitignore  pyproject.toml  readme.md
src/: 9_1_task1.py  9_1_task2.py  9_1_task4.py  task3_9_1.py  task4_9_1.py  task_10_2.py
test/: conftest.py  test_main.py
