[project]
qname = "pythonproject2-fortests"
version = "0.1.0"
description = ""
authors = [
    {name = "IKolesnikov",email = "76kolesnikof@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
